[package]
name = "vscode-remote-try-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "abc001",
  "abc002",
  "abc003",
  "abc004",
  "abc005",
  "abc006",
  "abc007",
  "abc009",
  "abc010",
  "abc011",
  "abc012",
  "abc013",
  "abc014",
  "abc015",
  "abc016",
  "abc017",
  "abc018",
  "abc019",
  "abc020",
  "abc021",
  "abc022",
  "abc023",
  "abc024",
  "abc025",
  "abc026",
  "abc027",
  "abc028",
  "abc029",
  "abc030",
  "abc031",
  "abc032",
  "abc033",
  "abc034",
  "abc035",
  "abc036",
  "abc037",
  "abc038",
  "abc039",
  "abc040",
  "abc041",
  "abc042",
  "abc043",
  "abc044",
  "abc045",
  "abc046",
  "abc047",
  "abc048",
  "abc049",
  "abc050",
  "abc051",
  "abc052",
  "abc053",
  "abc054",
  "abc055",
  "abc056",
  "abc057",
  "abc058",
  "abc059",
  "abc060",
  "abc061",
  "abc062",
  "abc063",
  "abc064",
  "abc065",
  "abc066",
  "abc067",
  "abc068",
  "abc069",
  "abc070",
  "abc071",
  "abc072",
  "abc073",
  "abc074",
  "abc075",
  "abc076",
  "abc077",
  "abc078",
  "abc079",
  "abc080",
  "abc081",
  "abc082",
  "abc083",
  "abc084",
  "abc085",
  "abc086",
  "abc087",
  "abc088",
  "abc089",
  "abc090",
  "abc091",
  "abc092",
  "abc093",
  "abc103",
  "abc109",
  "abc148",
  "abc152",
  "abc160",
  "abc161",
  "abc163",
  "abc164",
  "abc165",
  "abc166",
  "abc168",
  "abc170",
  "abc171",
  "abc172",
  "abc174",
  "abc175",
  "abc176",
  "abc177",
  "abc178",
  "abc179",
  "abc180",
  "abc181",
  "abc182",
  "abc183",
  "abc184",
  "abc185",
  "abc186",
  "abc192",
  "abc214",
  "abc215",
  "abc226",
  "abc259",
  "abc261",
  "abc291",
  "abc333",
  "practice",
]
exclude = []

[dependencies]
