[package]
name = "vscode-remote-try-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "contests/abc001",
  "contests/abc002",
  "contests/abc003",
  "contests/abc004",
  "contests/abc005",
  "contests/abc006",
  "contests/abc007",
  "contests/abc009",
  "contests/abc010",
  "contests/abc011",
  "contests/abc012",
  "contests/abc013",
  "contests/abc014",
  "contests/abc015",
  "contests/abc016",
  "contests/abc017",
  "contests/abc018",
  "contests/abc019",
  "contests/abc020",
  "contests/abc021",
  "contests/abc022",
  "contests/abc023",
  "contests/abc024",
  "contests/abc025",
  "contests/abc026",
  "contests/abc027",
  "contests/abc028",
  "contests/abc029",
  "contests/abc030",
  "contests/abc031",
  "contests/abc032",
  "contests/abc033",
  "contests/abc034",
  "contests/abc035",
  "contests/abc036",
  "contests/abc037",
  "contests/abc038",
  "contests/abc039",
  "contests/abc040",
  "contests/abc041",
  "contests/abc042",
  "contests/abc043",
  "contests/abc044",
  "contests/abc045",
  "contests/abc046",
  "contests/abc047",
  "contests/abc048",
  "contests/abc049",
  "contests/abc050",
  "contests/abc051",
  "contests/abc052",
  "contests/abc053",
  "contests/abc054",
  "contests/abc055",
  "contests/abc056",
  "contests/abc057",
  "contests/abc058",
  "contests/abc059",
  "contests/abc060",
  "contests/abc061",
  "contests/abc062",
  "contests/abc063",
  "contests/abc064",
  "contests/abc065",
  "contests/abc066",
  "contests/abc067",
  "contests/abc068",
  "contests/abc069",
  "contests/abc070",
  "contests/abc071",
  "contests/abc072",
  "contests/abc073",
  "contests/abc074",
  "contests/abc075",
  "contests/abc076",
  "contests/abc077",
  "contests/abc078",
  "contests/abc079",
  "contests/abc080",
  "contests/abc081",
  "contests/abc082",
  "contests/abc083",
  "contests/abc084",
  "contests/abc085",
  "contests/abc086",
  "contests/abc087",
  "contests/abc088",
  "contests/abc089",
  "contests/abc090",
  "contests/abc091",
  "contests/abc092",
  "contests/abc093",
  "contests/abc094",
  "contests/abc095",
  "contests/abc096",
  "contests/abc097",
  "contests/abc098",
  "contests/abc099",
  "contests/abc100",
  "contests/abc101",
  "contests/abc102",
  "contests/abc103",
  "contests/abc104",
  "contests/abc105",
  "contests/abc106",
  "contests/abc107",
  "contests/abc108",
  "contests/abc109",
  "contests/abc110",
  "contests/abc111",
  "contests/abc112",
  "contests/abc113",
  "contests/abc114",
  "contests/abc115",
  "contests/abc116",
  "contests/abc117",
  "contests/abc118",
  "contests/abc119",
  "contests/abc120",
  "contests/abc121",
  "contests/abc122",
  "contests/abc123",
  "contests/abc124",
  "contests/abc125",
  "contests/abc126",
  "contests/abc127",
  "contests/abc128",
  "contests/abc129",
  "contests/abc130",
  "contests/abc131",
  "contests/abc132",
  "contests/abc133",
  "contests/abc134",
  "contests/abc135",
  "contests/abc136",
  "contests/abc137",
  "contests/abc138",
  "contests/abc139",
  "contests/abc140",
  "contests/abc141",
  "contests/abc142",
  "contests/abc143",
  "contests/abc144",
  "contests/abc145",
  "contests/abc146",
  "contests/abc147",
  "contests/abc148",
  "contests/abc149",
  "contests/abc150",
  "contests/abc151",
  "contests/abc152",
  "contests/abc153",
  "contests/abc154",
  "contests/abc155",
  "contests/abc156",
  "contests/abc157",
  "contests/abc158",
  "contests/abc159",
  "contests/abc160",
  "contests/abc161",
  "contests/abc162",
  "contests/abc163",
  "contests/abc164",
  "contests/abc165",
  "contests/abc166",
  "contests/abc167",
  "contests/abc168",
  "contests/abc169",
  "contests/abc170",
  "contests/abc171",
  "contests/abc172",
  "contests/abc173",
  "contests/abc174",
  "contests/abc175",
  "contests/abc176",
  "contests/abc177",
  "contests/abc178",
  "contests/abc179",
  "contests/abc180",
  "contests/abc181",
  "contests/abc182",
  "contests/abc183",
  "contests/abc184",
  "contests/abc185",
  "contests/abc186",
  "contests/abc187",
  "contests/abc188",
  "contests/abc189",
  "contests/abc190",
  "contests/abc191",
  "contests/abc192",
  "contests/abc193",
  "contests/abc194",
  "contests/abc195",
  "contests/abc196",
  "contests/abc197",
  "contests/abc198",
  "contests/abc199",
  "contests/abc200",
  "contests/abc201",
  "contests/abc202",
  "contests/abc203",
  "contests/abc204",
  "contests/abc205",
  "contests/abc206",
  "contests/abc207",
  "contests/abc208",
  "contests/abc209",
  "contests/abc210",
  "contests/abc211",
  "contests/abc212",
  "contests/abc213",
  "contests/abc214",
  "contests/abc215",
  "contests/abc216",
  "contests/abc217",
  "contests/abc218",
  "contests/abc219",
  "contests/abc220",
  "contests/abc221",
  "contests/abc222",
  "contests/abc223",
  "contests/abc224",
  "contests/abc225",
  "contests/abc226",
  "contests/abc227",
  "contests/abc228",
  "contests/abc229",
  "contests/abc230",
  "contests/abc231",
  "contests/abc232",
  "contests/abc233",
  "contests/abc234",
  "contests/abc235",
  "contests/abc236",
  "contests/abc237",
  "contests/abc238",
  "contests/abc239",
  "contests/abc240",
  "contests/abc241",
  "contests/abc242",
  "contests/abc259",
  "contests/abc261",
  "contests/abc291",
  "contests/abc333",
  "contests/practice",
]
exclude = []

[dependencies]
